<resources>
    <string name="app_name">My Team</string>

    <string name="message_noconnection">Internet connection is not available. Please turn on cellular data or correct Wi-Fi settings.</string>
    <!-- strings.xml -->
    <string-array name="status_array">
        <item>All</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>

    <string name="select_user">Select User</string>
    <string name="select_status">Select Status</string>
    <string name="apply">APPLY</string>
    <string name="add_task">Add New Task</string>
    <string name="empty_records">No Records Found</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_delete_item">You Want to Delete Item ?</string>
    <string name="text_logout">You Want to Logout ?</string>
    <string name="save_task">Save Task</string>
    <string name="text_done">Done</string>
    <string name="text_all">All</string>
    <string name="update_task">Update Task</string>
    <string name="cancel">Cancel</string>
    <string name="task_assign_date">Task Assign Date</string>
    <string name="task_date_formate">DD/MM/YYYY</string>
    <string name="task_completion_date">Task Completion Date</string>
    <string name="task_assigned_to">Task Assigned To</string>
    <string name="description">Description</string>
    <string name="remarks">Remarks</string>
    <string name="user_remarks">User Remarks</string>
    <string name="title">Title</string>
    <string name="completion_date">Completion Date:</string>
    <string name="assign_date">Assign Date:</string>
    <string name="text_description">Description :</string>
    <string name="assigned_to">Assigned To:</string>
    <string name="task_title">Task Title:</string>
    <string name="remark">Remark</string>
    <string name="status">Status:</string>
    <string name="export">Export</string>
    <string name="my_team">My Team</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_mark_done">Pending Approval</string>
    <string name="status_verified_done">Completed</string>
    <string name="prefApplication" translatable="false">prefApplication</string>
    <string name="prefUserId" translatable="false">prefUserId</string>
    <string name="prefUserName" translatable="false">prefUserName</string>
    <string name="prefUserRole" translatable="false">prefUserRole</string>
    <string name="prefAdminId" translatable="false">prefAdminId</string>
    <string name="prefSession" translatable="false">prefSession</string>
    <string name="prefIsRememberMe" translatable="false">prefIsRememberMe</string>
    <string name="prefUserEmail" translatable="false">prefUserEmail</string>
    <string name="prefLoginPassword" translatable="false">prefLoginPassword</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_cancel_task">Are you sure want to Cancel ?</string>
    <string name="text_mandatory" translatable="false"><![CDATA[ <b><font color=#ff4444>*</font></b>]]></string>
    <string name="no_records_found">No records available</string>
    <string name="add_title">Add Title</string>
    <string name="delete_title">Delete Title</string>
    <string name="title_name">Title Name</string>
    <string name="ex_created_at_12_05_2025">Created at: 12/05/2025</string>
    <string name="text_created_at">Created at</string>

    <string name="text_alert">Alert</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="enter_title_name">Title name</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="select_assigned_user">Select assigned user</string>
    <string name="text_search">Search</string>
    <string name="msg_exit_app">Please click back button again to exit</string>
</resources>