<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.taskmanagement.viewmodel.AdminViewModel" />

        <variable
            name="onClickNavHeader"
            type="android.view.View.OnClickListener" />

        <variable
            name="generalListener"
            type="com.example.taskmanagement.interactors.GeneralListener" />

        <variable
            name="onNavigationItemSelectedListener"
            type="com.google.android.material.navigation.NavigationView.OnNavigationItemSelectedListener" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <LinearLayout
            android:id="@+id/filterSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:drawable/divider_horizontal_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:showDividers="middle"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_user" />

                <Spinner
                    android:id="@+id/spinnerUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:prompt="@string/select_user"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_status" />

                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:prompt="@string/select_status"
                    android:spinnerMode="dropdown" />
            </LinearLayout>


            <Button
                android:id="@+id/btnApplyFilters"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{generalListener::onClick}"
                android:text="@string/apply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exportToExcel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_ripple_mask"
            android:onClick="@{generalListener::onClick}"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterSection">

            <TextView
                android:id="@+id/exportToExcelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/export"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/exportToExcel"
                app:layout_constraintTop_toBottomOf="@+id/filterSection" />

            <ImageView

                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/export"
                android:src="@drawable/xls"
                android:text="@string/export"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filterSection" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportToExcel"
            tools:listitem="@layout/task_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_task"
            android:onClick="@{generalListener::onClick}"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/NorecordTextStyle"
            android:visibility="@{viewModel.observerNoRecords==2?View.VISIBLE:View.GONE}"
            tools:ignore="MissingConstraints"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>





