<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.taskmanagement.businesslogic.viewmodel.AdminTaskViewModel" />
        <variable
            name="onClickNavHeader"
            type="android.view.View.OnClickListener" />
        <variable
            name="generalListener"
            type="com.example.taskmanagement.businesslogic.interactors.GeneralListener" />
        <variable
            name="onNavigationItemSelectedListener"
            type="com.google.android.material.navigation.NavigationView.OnNavigationItemSelectedListener" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="?android:attr/windowBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    android:layout_marginTop="20dp"
                    app:cardBackgroundColor="@android:color/white">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <!-- Title -->
                       <!-- <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"
                            android:layout_marginBottom="12dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences" />
                        </com.google.android.material.textfield.TextInputLayout>-->
                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/add_patient"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_ripple_mask"
                            android:drawableStart="@drawable/ic_add"
                            app:drawableTint="@color/black"
                            android:drawablePadding="8dp"
                            android:onClick="@{generalListener::onClick}"
                            android:paddingVertical="5dp"
                            android:paddingStart="10dp"
                            android:paddingEnd="20dp"
                            android:layout_marginBottom="12dp"
                            android:text="@string/add_title"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/white"
                            app:cardCornerRadius="8dp"
                            android:layout_marginBottom="12dp"
                            app:cardElevation="2dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp">

                                <AutoCompleteTextView
                                    android:id="@+id/etTitle"
                                    android:layout_width="0dp"
                                    android:layout_height="0dp"
                                    android:layout_marginStart="10dp"
                                    android:background="@null"
                                    android:hint="@string/title"
                                    android:textColorHint="@color/color_grey"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toStartOf="@+id/ivTitleDropdown"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageView
                                    android:id="@+id/ivTitleDropdown"
                                    android:layout_width="wrap_content"
                                    android:layout_height="0dp"
                                    android:src="@drawable/arrow_bottom"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />


                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.cardview.widget.CardView>



                        <!-- Description -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:layout_marginBottom="12dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etDescription"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:inputType="textMultiLine"
                                android:gravity="top" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <!-- Assigned To -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/task_assigned_to"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:layout_marginBottom="6dp" />

                        <Spinner
                            android:id="@+id/spinnerUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/background_spinner_brown" />

                        <!-- Assign Date -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_assign_date"
                            android:layout_marginBottom="16dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvAssignDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:clickable="true"
                                android:inputType="none"
                                android:cursorVisible="false"
                                android:textColor="@android:color/black"
                                android:background="@null"
                                android:importantForAccessibility="yes"/>
                        </com.google.android.material.textfield.TextInputLayout>



                        <!-- Completion Date -->

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/task_completion_date"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}"
                            android:layout_marginBottom="16dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/tvPickCompleteDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="false"
                                android:clickable="true"
                                android:inputType="none"
                                android:cursorVisible="false"
                                android:textColor="@android:color/black"
                                android:background="@null"
                                android:importantForAccessibility="yes"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <!-- Remark -->
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/remarks"
                            android:layout_marginBottom="12dp"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRemark"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="top"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/user_remarks"
                            android:layout_marginBottom="12dp"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etUserRemark"
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="top"
                                android:enabled="false"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <!-- Select Status -->
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/select_status"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}"
                            android:layout_marginBottom="6dp" />

                        <Spinner
                            android:id="@+id/spinnerStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="@{viewModel.editMode ? View.VISIBLE : View.GONE}"
                            android:layout_marginBottom="16dp"
                            android:background="@drawable/background_spinner_brown" />

                        <!-- Save Button -->

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/bottomButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="10dp"
                    android:weightSum="2"

                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_button_cancel"
                        android:gravity="center"
                        android:onClick="@{generalListener::onClick}"
                        android:paddingVertical="14dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="#C94C67"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:onClick="@{generalListener::onClick}"
                        android:background="@drawable/bg_button_confirm"
                        android:gravity="center"
                        android:paddingVertical="14dp"
                        android:text="@{viewModel.editMode ? @string/update_task : @string/save_task}"
                        tools:text="@string/save_task"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>



        </ScrollView>

    </LinearLayout>
</layout>


